# local-email-classifier

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  design.md
docs/: architecture.md
docs/designs/done/: embedding-cache.md
src/: log.rs  main.rs
src/core/: domain.rs  features.rs  history.rs  labels.rs  mod.rs  model.rs  text.rs
src/shell/: embed.rs  eval.rs  fit.rs  mailfile.rs  mod.rs  notmuch.rs  persist.rs
